--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "react-spotify-embed": "^0.2.3",
     "sass": "^1.49.9"
   },
   "scripts": {
