--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "bridge-family-mediation",
-  "version": "0.1.0",
+  "name": "hostinger-react",
+  "homepage": "http://bridgefamilymediation.info",
+  "version": "1.0.0",
+  "description": "my react application",
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
