--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hostinger-react",
-  "homepage": "http://bridgefamilymediation.info",
-  "version": "1.0.0",
+  "name": "bridgefamilymediation",
+  "homepage": "http://bridgefamilymediation.info/",
+  "version": "0.1.0",
   "description": "my react application",
   "private": true,
   "dependencies": {
