--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bridgefamilymediation",
-  "homepage": "http://bridgefamilymediation.info/",
+  "homepage": "https://bridgefamilymediation.info",
   "version": "0.1.0",
   "description": "my react application",
   "private": true,
