--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "bulma": "^0.9.3",
+    "emailjs-com": "^3.2.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "node-sass": "^7.0.3",
@@ -15,7 +16,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-spotify-embed": "^0.2.3",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
